clusters/talos-cluster/megane/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: megane
  namespace: megane
spec:
  replicas: 1
  selector:
    matchLabels:
      app: megane
  template:
    metadata:
      labels:
        app: megane
    spec:
      containers:
        - name: megane
          image: elevenam/megane:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /app/uploads
            - name: database
              mountPath: /database.db
              subPath: database.db
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: megane-data
        - name: database
          persistentVolumeClaim:
            claimName: megane-db
