clusters/talos-cluster/megane/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: megane
  namespace: megane
spec:
  selector:
    app: megane
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
