clusters/talos-cluster/megane/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: megane-ingress
  namespace: megane
  annotations:
    tailscale.com/funnel: "true"
spec:
  defaultBackend:
    service:
      name: megane
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - drive
